# pythonic-project-samples

./: .gitignore  Pipfile  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
docs/: history.md
migration/: alembic.ini  env.py
migration/versions/: 2c8e52fba207_init_table.py
src/example_blog/: __init__.py  cmdline.py  dao.py  db.py  dependencies.py  exceptions.py  log.py  models.py  routes.py  schemas.py  server.py  services.py  utils.py  views.py
src/example_blog/config/: __init__.py  settings.yml
src/example_blog/migration/: alembic.ini  env.py
src/example_blog/migration/versions/: 4dc5260062e0_init.py  63c72b392d87_init_table.py
src/example_blog/views/: article.py  auth.py  user.py
src/file2mongo/: __init__.py  cmdline.py  exceptions.py  log.py  transform.py
src/file2mongo/config/: __init__.py  settings.yml
tests/: __init__.py  conftest.py  settings.yml  test_app.py  test_cmdline.py  test_dao.py  test_dependencies.py  test_log.py  test_service.py  test_services.py  test_transform.py  test_utils.py  test_views.py  tests.py
