[metadata]
name = file2mongo
version = attr: file2mongo.__version__
author = demo
author_email = demo@example.com
description = File data to MongoDB
keywords = file2mongo
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7

[options]
python_requires > = 3.7
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =
    dynaconf
    click

[options.packages.find]
where = src
exclude =
    tests*
    docs

# https://setuptools.readthedocs.io/en/latest/userguide/entry_point.html
[options.entry_points]
console_scripts =
    file2mongo = file2mongo.cmdline:main

# Packaging project data in module file2mongo.
# https://setuptools.readthedocs.io/en/latest/userguide/datafiles.html?highlight=package_data
[options.package_data]
file2mongo.config =
    settings.yml

# Copy data for user from project when pip install.
# The relative path is prefix `sys.prefix` . eg: `/usr/local/`.
# Path and data will remove When pip uninstall.
# https://docs.python.org/3/distutils/setupscript.html#installing-additional-files
[options.data_files]
etc/file2mongo =
    src/file2mongo/config/settings.yml

[tool:pytest]
testpaths = tests
python_files = tests.py test_*.py